[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["crosbygs <crosby.greg@gmail.com>"]
description = ""
name = "pythonlearning"
version = "0.1.0"
[tool.poetry.dependencies]
pyperclip = "^1.7"
python = "^3.7"
[tool.poetry.dev-dependencies]
